# OpenTouhouAndroid

./: .gitignore  License.md  README.md  build.gradle  settings.gradle
animation/: build.gradle
animation/src/main/: AndroidManifest.xml
app/: build.gradle  local.properties  proguard-rules.pro
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/: TextureShader.vert
app/src/main/cpp/: CMakeLists.txt
audio/: build.gradle
audio/src/main/: AndroidManifest.xml
audio/src/main/cpp/: CMakeLists.txt
audio/src/main/cpp/audioengine/src/: AudioBuffer.cpp  AudioEngine.cpp  AudioManager.cpp  AudioPlayer.cpp  AudioQueue.cpp  JNIMapping.cpp  OutputMixer.cpp  Resource.cpp  ResourceManager.cpp
audio/src/main/cpp/audioengine/src/include/: AudioBuffer.h  AudioEngine.h  AudioManager.h  AudioPlayer.h  AudioQueue.h  JNIMapping.h  OutputMixer.h  Resource.h  ResourceManager.h
audio/src/main/cpp/test/: JNIFunc.cpp  TestJNI.cpp
audio/src/main/cpp/test/include/: JNIFunc.h
concurrent/: build.gradle
concurrent/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
graphics/: build.gradle
graphics/src/main/: AndroidManifest.xml
graphics_opengl/: build.gradle
io/: build.gradle
io/src/main/: AndroidManifest.xml
loader/: build.gradle
loader/src/main/: AndroidManifest.xml
math/: build.gradle
math/src/main/: AndroidManifest.xml
opengl/: build.gradle
opengl/src/main/: AndroidManifest.xml
opengles20/: build.gradle
opengles20/src/main/: AndroidManifest.xml
opengles30/: build.gradle
opengles30/src/main/: AndroidManifest.xml
scarlet-vulkan/: build.gradle
scarlet-vulkan/src/main/cpp/: CMakeLists.txt  Constants.h  DebugMessenger.cpp  DebugMessenger.h  Engine.cpp  Engine.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  (+6 more)
scene/: build.gradle
scene/src/main/: AndroidManifest.xml
src/gradle/wrapper/: gradle-wrapper.properties
ui/: build.gradle
ui/src/main/: AndroidManifest.xml
vulkan/: build.gradle
(+481 files in other folders)
